08-TRAEFIK-ROUTE-APPS-TEST/test-b-nginx-ingressroute-prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: nginx
  name: nginx-deploy-main
  namespace: test-web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-main
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: test-web
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nginx.<your_domain>`)
      services:
        - name: nginx-deploy-main
          port: 80
  # Using wildcard TLS certificate
  tls:
    secretName: mydomain-wildcard-cluster-cert-prod-tls
